# ai-gateway

./: .gitignore  package.json  pnpm-lock.yaml
ai-gateway-aa-squad-agile-docs/: AI Gateway PRD Final.md
ai-gateway-aa-squad-agile-docs/AI-Gateway-Architecture/: AI Gateway Architecture Document.md  AI Gateway Architecture Final.md  AI Gateway Frontend Architecture Document.md  Gateway Architecture Doc FINAL.md
ai-gateway-aa-squad-agile-docs/AI-Gateway-Backlog/: 4 Story 11 Set Up Core API Gateway (Kong).md  Story 12 Implement Unified LLM API (PortkeyLiteLLM).md  Story 13 Integrate Kong with Unified LLM API.md  Story 21 Implement Core Intelligent Model Router (Not DiamondRouteLLM).md  Story 22 Develop Cost & Performance Optimization Rules.md  Story 23 Integrate OptiLLM for Fine-Tuning.md  Story 31 Implement Automatic Retries for LLM Calls.md  Story 32 Develop Fallback Mechanism for LLM Providers.md  Story 33 Implement Load Balancing Across LLM Providers.md  Story 41 Implement Centralized Logging for Gateway Operations.md  Story 42 Develop Core Monitoring & Metrics Collection.md  Story 43 Implement Distributed Tracing for LLM Requests.md  Story 44 Build External Analytics & Configuration Dashboard.md  Story 51 Implement Prompt Template Management.md  Story 52 Develop Prompt Partials and Chaining.md  (+1 more)
infra/: docker-compose.yml
project_journal/: README.md
services/unified_llm_api/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
services/unified_llm_api/.github/workflows/: tests.yml
services/unified_llm_api/tests/: test_main.py
(+5 files in other folders)
