[project]
name = "unified-llm-api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Antonio Reid", email = "read.musik@gmail.com"},
    {name = "", email = ""},
]
dependencies = [
    "fastapi",
    "uvicorn",
    "litellm",
    "python-dotenv",
    "pytest",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
